decoupled checklist from events - separate usecase