@@ -1,12 +1,15 @@
+// interface_adapter/checklist/load_checklist/LoadChecklistPresenter.java
 package interface_adapter.checklist.load_checklist;
 
-import java.util.List;
-
+import interface_adapter.checklist.ChecklistViewModel;
+import interface_adapter.checklist.ChecklistState;
+import interface_adapter.checklist.TaskState;
 import use_case.task.load_checklist.LoadChecklistOutputBoundary;
 import use_case.task.load_checklist.LoadChecklistOutputData;
-import interface_adapter.checklist.ChecklistState;
-import interface_adapter.checklist.ChecklistViewModel;
-import interface_adapter.checklist.TaskState;
+import entity.task.Task;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class LoadChecklistPresenter implements LoadChecklistOutputBoundary {
     private final ChecklistViewModel viewModel;
@@ -16,30 +19,14 @@ public class LoadChecklistPresenter implements LoadChecklistOutputBoundary {
     }
 
     @Override
-    public void prepareSuccessView(
-            LoadChecklistOutputData outputData
-    ) {
-        final List<TaskState> tasks =
-                outputData.getTasks()
-                        .stream()
-                        .map(task -> new TaskState(
-                                task.getId(),
-                                task.getDescription(),
-                                task.isCompleted()
-                        ))
-                        .toList();
+    public void prepareSuccessView(LoadChecklistOutputData outputData) {
+        final List<TaskState> taskStates = outputData.getTasks().stream()
+                .map(t -> new TaskState(t.getId(), t.getDescription(), t.isCompleted()))
+                .collect(Collectors.toList());
 
         final ChecklistState state = viewModel.getState();
-        state.setEventId(outputData.getEventId());
-        state.setTasks(tasks);
+        state.setTasks(taskStates);
         state.setErrorMessage("");
-
-        viewModel.firePropertyChanged();
-    }
-
-    @Override
-    public void prepareFailView(String errorMessage) {
-        viewModel.getState().setErrorMessage(errorMessage);
         viewModel.firePropertyChanged();
     }
 }
